--- a/nesca_3.ui
+++ b/nesca_3.ui
@@ -97,7 +97,7 @@
       <enum>QTabWidget::Rounded</enum>
      </property>
      <property name="currentIndex">
-      <number>3</number>
+      <number>0</number>
      </property>
      <property name="elideMode">
       <enum>Qt::ElideMiddle</enum>
@@ -966,10 +966,13 @@ color: rgb(214, 214, 0);</string>
        <string>Options</string>
       </attribute>
       <widget class="QCheckBox" name="trackerOnOff">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="geometry">
         <rect>
          <x>30</x>
-         <y>120</y>
+         <y>60</y>
          <width>281</width>
          <height>17</height>
         </rect>
@@ -989,161 +992,18 @@ color: rgb(214, 214, 0);</string>
        <property name="text">
         <string>Send results to public NescaDatabase</string>
        </property>
+       <property name="checkable">
+        <bool>true</bool>
+       </property>
        <property name="checked">
         <bool>false</bool>
-       </property>
-      </widget>
-      <widget class="QLineEdit" name="lineTrackerScr">
-       <property name="geometry">
-        <rect>
-         <x>250</x>
-         <y>2</y>
-         <width>121</width>
-         <height>16</height>
-        </rect>
-       </property>
-       <property name="font">
-        <font>
-         <family>Small Fonts</family>
-         <pointsize>7</pointsize>
-        </font>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">color: rgb(216, 216, 216);background-color: rgb(56, 56, 56);border:none;</string>
-       </property>
-       <property name="text">
-        <string>/go/</string>
-       </property>
-       <property name="maxLength">
-        <number>256</number>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignCenter</set>
-       </property>
-       <property name="placeholderText">
-        <string>Balancer script</string>
-       </property>
-      </widget>
-      <widget class="QLineEdit" name="lineTrackerSrv">
-       <property name="geometry">
-        <rect>
-         <x>30</x>
-         <y>2</y>
-         <width>211</width>
-         <height>16</height>
-        </rect>
-       </property>
-       <property name="font">
-        <font>
-         <family>Small Fonts</family>
-         <pointsize>7</pointsize>
-        </font>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">color: rgb(216, 216, 216);background-color: rgb(56, 56, 56);border:none;</string>
-       </property>
-       <property name="text">
-        <string>balancer.d3w.org</string>
-       </property>
-       <property name="maxLength">
-        <number>256</number>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignCenter</set>
-       </property>
-       <property name="placeholderText">
-        <string>Balancer url</string>
-       </property>
-      </widget>
-      <widget class="QLineEdit" name="linePersKey">
-       <property name="geometry">
-        <rect>
-         <x>30</x>
-         <y>22</y>
-         <width>341</width>
-         <height>12</height>
-        </rect>
-       </property>
-       <property name="font">
-        <font>
-         <family>Small Fonts</family>
-         <pointsize>7</pointsize>
-        </font>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">color: rgb(216, 216, 216);background-color: rgb(56, 56, 56); border:none;</string>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-       <property name="maxLength">
-        <number>32</number>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignCenter</set>
-       </property>
-       <property name="placeholderText">
-        <string>Your personal key here</string>
-       </property>
-      </widget>
-      <widget class="QLineEdit" name="trcSrvPortLine">
-       <property name="geometry">
-        <rect>
-         <x>379</x>
-         <y>2</y>
-         <width>62</width>
-         <height>16</height>
-        </rect>
-       </property>
-       <property name="font">
-        <font>
-         <family>Small Fonts</family>
-         <pointsize>7</pointsize>
-        </font>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">color: rgb(216, 216, 216);background-color: rgb(56, 56, 56);border:none;</string>
-       </property>
-       <property name="text">
-        <string>80</string>
-       </property>
-       <property name="maxLength">
-        <number>5</number>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignCenter</set>
-       </property>
-       <property name="placeholderText">
-        <string>Balancer port here</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="checkKeyBut">
-       <property name="geometry">
-        <rect>
-         <x>379</x>
-         <y>18</y>
-         <width>61</width>
-         <height>16</height>
-        </rect>
-       </property>
-       <property name="font">
-        <font>
-         <family>Eurostile</family>
-         <pointsize>8</pointsize>
-        </font>
-       </property>
-       <property name="styleSheet">
-        <string notr="true"/>
-       </property>
-       <property name="text">
-        <string>Check key</string>
        </property>
       </widget>
       <widget class="QCheckBox" name="pingingOnOff">
        <property name="geometry">
         <rect>
          <x>30</x>
-         <y>84</y>
+         <y>40</y>
          <width>75</width>
          <height>17</height>
         </rect>
@@ -1176,8 +1036,8 @@ color: rgb(214, 214, 0);</string>
        </property>
        <property name="geometry">
         <rect>
-         <x>108</x>
-         <y>86</y>
+         <x>110</x>
+         <y>40</y>
          <width>51</width>
          <height>15</height>
         </rect>
@@ -1207,8 +1067,8 @@ color: rgb(214, 214, 0);</string>
       <widget class="QLabel" name="label">
        <property name="geometry">
         <rect>
-         <x>163</x>
-         <y>85</y>
+         <x>160</x>
+         <y>40</y>
          <width>31</width>
          <height>16</height>
         </rect>
@@ -1233,7 +1093,7 @@ color: rgb(214, 214, 0);</string>
        <property name="geometry">
         <rect>
          <x>390</x>
-         <y>69</y>
+         <y>30</y>
          <width>51</width>
          <height>20</height>
         </rect>
@@ -1264,7 +1124,7 @@ color: rgb(214, 214, 0);</string>
        <property name="geometry">
         <rect>
          <x>320</x>
-         <y>69</y>
+         <y>30</y>
          <width>68</width>
          <height>16</height>
         </rect>
@@ -1286,7 +1146,7 @@ color: rgb(214, 214, 0);</string>
        <property name="geometry">
         <rect>
          <x>320</x>
-         <y>84</y>
+         <y>50</y>
          <width>62</width>
          <height>26</height>
         </rect>
@@ -1312,7 +1172,7 @@ color: rgb(214, 214, 0);</string>
        <property name="geometry">
         <rect>
          <x>390</x>
-         <y>90</y>
+         <y>60</y>
          <width>51</width>
          <height>20</height>
         </rect>
@@ -1343,7 +1203,7 @@ color: rgb(214, 214, 0);</string>
        <property name="geometry">
         <rect>
          <x>30</x>
-         <y>68</y>
+         <y>20</y>
          <width>161</width>
          <height>17</height>
         </rect>
@@ -1368,71 +1228,6 @@ color: rgb(214, 214, 0);</string>
        </property>
        <property name="checked">
         <bool>true</bool>
-       </property>
-      </widget>
-      <widget class="QLineEdit" name="systemProxyIP">
-       <property name="geometry">
-        <rect>
-         <x>30</x>
-         <y>38</y>
-         <width>341</width>
-         <height>12</height>
-        </rect>
-       </property>
-       <property name="font">
-        <font>
-         <family>Small Fonts</family>
-         <pointsize>7</pointsize>
-        </font>
-       </property>
-       <property name="toolTip">
-        <string/>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">color: rgb(216, 216, 216);background-color: rgb(56, 56, 56); border:none;</string>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-       <property name="maxLength">
-        <number>32</number>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignCenter</set>
-       </property>
-       <property name="placeholderText">
-        <string>Proxy here</string>
-       </property>
-      </widget>
-      <widget class="QLineEdit" name="systemProxyPort">
-       <property name="geometry">
-        <rect>
-         <x>379</x>
-         <y>38</y>
-         <width>62</width>
-         <height>12</height>
-        </rect>
-       </property>
-       <property name="font">
-        <font>
-         <family>Small Fonts</family>
-         <pointsize>7</pointsize>
-        </font>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">color: rgb(216, 216, 216);background-color: rgb(56, 56, 56);border:none;</string>
-       </property>
-       <property name="text">
-        <string>3128</string>
-       </property>
-       <property name="maxLength">
-        <number>5</number>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignCenter</set>
-       </property>
-       <property name="placeholderText">
-        <string>Balancer port here</string>
        </property>
       </widget>
      </widget>
@@ -1743,7 +1538,7 @@ p, li { white-space: pre-wrap; }
        <x>10</x>
        <y>210</y>
        <width>480</width>
-       <height>16</height>
+       <height>20</height>
       </rect>
      </property>
      <property name="font">
@@ -3273,9 +3068,6 @@ p, li { white-space: pre-wrap; }
   <tabstop>lineILVL</tabstop>
   <tabstop>dnsPortLine</tabstop>
   <tabstop>lineEditThread</tabstop>
-  <tabstop>lineTrackerSrv</tabstop>
-  <tabstop>lineTrackerScr</tabstop>
-  <tabstop>linePersKey</tabstop>
   <tabstop>trackerOnOff</tabstop>
   <tabstop>tabMainWidget</tabstop>
   <tabstop>startScanButton_3</tabstop>
